Update generated library support for io.jsonwebtoken:jjwt-gson:0.12.0